--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ header {
 #caption {
   margin: 15px auto;
   text-align: center;
-  color: rgba(44, 62, 80, 0.95);
+  color: white;
   font-size: 1.2rem;
 }
 .close {
